--- a/Christopher_Perez_00_python_intro_student.ipynb
+++ b/Christopher_Perez_00_python_intro_student.ipynb
@@ -580,12 +580,126 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def lucky7(test_number):\n",
+        "\n",
+        "# test_number = int(input((\"enter a number between 1 and 10\\n\")))\n",
+        "\n",
+        "# if number is greater than 10, then reject input\n",
+        "  if test_number >10:\n",
+        "    print(\"rejected\")\n",
+        "    return 99\n",
+        "# if number is less than 1, then reject input\n",
+        "  elif test_number <1:\n",
+        "    print(\"rejected\")\n",
+        "    return -99\n",
+        "# if the user enters 7, print \"lucky guess\"\n",
+        "  elif test_number ==7:\n",
+        "    print(\"lucky guess\")\n",
+        "    return 1\n",
+        "# for all other numbers, print \"not correct - better luck next time!\"\n",
+        "  else:\n",
+        "    print(\"not correct - better luck next time!\")\n",
+        "    return 0\n",
+        "\n"
+      ],
       "metadata": {
         "id": "0Oa7EG-f0_AM"
       },
-      "execution_count": null,
+      "execution_count": 137,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "assert lucky7(2) ==0\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RJFk3HG5IcQ3",
+        "outputId": "5d908cd8-e49a-428c-d295-7866f18b572d"
+      },
+      "execution_count": 139,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "not correct - better luck next time!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "assert lucky7(-5) ==-99"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GEpSABTQJHCJ",
+        "outputId": "602bbcde-276f-4e04-9e8a-0df593164fdb"
+      },
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "rejected\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "assert lucky7(11) ==99"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L0qVEqjaJLbG",
+        "outputId": "72efd944-1e17-4cea-e4af-a1b009ec1b43"
+      },
+      "execution_count": 141,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "rejected\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "assert lucky7(7) ==1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WVXdxGImJNZ6",
+        "outputId": "e200a712-a493-48ac-f3c6-76f9dc9d632a"
+      },
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "lucky guess\n"
+          ]
+        }
+      ]
     }
   ]
 }
